Closed Bug 1131640 Opened 9 years ago Closed 9 years ago

Intermittent test_eme_persistent_sessions.html | application terminated with exit code 2147483651 | Assertion failure: !mIsShutdown, at c:\builds\moz2_slave\m-in-w64-d-0000000000000000000\build\dom\media\fmp4\gmp\MediaDataDecoderProxy.cpp:53

Categories

(Core :: Audio/Video, defect)

x86
Windows 8
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla38
Tracking Status
firefox36 --- unaffected
firefox37 --- unaffected
firefox38 --- fixed
firefox-esr31 --- unaffected

People

(Reporter: cbook, Assigned: eflores)

References

()

Details

(Keywords: assertion, intermittent-failure)

Attachments

(2 obsolete files)

Windows 8 64-bit mozilla-inbound debug test mochitest-3

https://treeherder.mozilla.org/logviewer.html#?job_id=6436548&repo=mozilla-inbound

17:17:08 INFO - 257 ERROR TEST-UNEXPECTED-FAIL | dom/media/test/test_eme_persistent_sessions.html | application terminated with exit code 2147483651 

17:17:08 INFO - Assertion failure: !mIsShutdown, at c:\builds\moz2_slave\m-in-w64-d-0000000000000000000\build\dom\media\fmp4\gmp\MediaDataDecoderProxy.cpp:53
Matthew: I'm hitting this pretty reliably on test_eme_obs_notification.html, I've also seen it in the assertion in MediaDataDecoderProxy::Shutdown(). This is a regression from your EME in GMP PDM refactorings. Any ideas?
Flags: needinfo?(kinetik)
Attached patch fix? (obsolete) — Splinter Review
I don't seem to be able to reproduce this locally, but my guess is that this is being caused by the change in shutdown behaviour I made during the refactoring.  This patch reverts to the pre-refactoring behaviour.
Try push, I'll run some cycles of mochitest-3: https://treeherder.mozilla.org/#/jobs?repo=try&revision=44cf3947fb24

Chris, if you're able to reproduce this easily, please try the attached patch and let me know if it solves the problem.
Assignee: nobody → kinetik
Status: NEW → ASSIGNED
Flags: needinfo?(kinetik)
I don't see the same failure, but I get assert here:
Assertion failure: int32_t(mRefCnt) >= 0 (illegal refcnt), at c:\Users\Bob\src\mozilla\purple\objdir\dist\include\PlatformDecoderModule.h:193

Call stack:

xul.dll!mozilla::MediaDataDecoder::AddRef() Line 193	C++
xul.dll!nsRefPtr<mozilla::MediaDataDecoder>::nsRefPtr<mozilla::MediaDataDecoder>(mozilla::MediaDataDecoder * aRawPtr) Line 95	C++
xul.dll!mozilla::AudioCallbackAdapter::AudioCallbackAdapter(mozilla::MediaDataDecoderCallbackProxy * aCallback, mozilla::MediaDataDecoder * aDecoder) Line 26	C++
xul.dll!mozilla::EMEAudioCallbackAdapter::EMEAudioCallbackAdapter(mozilla::MediaDataDecoderCallbackProxy * aCallback, mozilla::MediaDataDecoder * aDecoder) Line 19	C++
xul.dll!mozilla::EMEAudioDecoder::EMEAudioDecoder(mozilla::CDMProxy * aProxy, const mp4_demuxer::AudioDecoderConfig & aConfig, mozilla::MediaTaskQueue * aTaskQueue, mozilla::MediaDataDecoderCallbackProxy * aCallback) Line 32	C++
xul.dll!mozilla::EMEDecoderModule::CreateAudioDecoder(const mp4_demuxer::AudioDecoderConfig & aConfig, mozilla::MediaTaskQueue * aAudioTaskQueue, mozilla::MediaDataDecoderCallback * aCallback) Line 285	C++
xul.dll!mozilla::AVCCDecoderModule::CreateAudioDecoder(const mp4_demuxer::AudioDecoderConfig & aConfig, mozilla::MediaTaskQueue * aAudioTaskQueue, mozilla::MediaDataDecoderCallback * aCallback) Line 271	C++
xul.dll!mozilla::MP4Reader::ReadMetadata(mozilla::MediaInfo * aInfo, nsDataHashtable<nsCStringHashKey,nsCString> * * aTags) Line 435	C++
xul.dll!mozilla::MediaDecoderStateMachine::DecodeMetadata() Line 2172	C++
xul.dll!mozilla::MediaDecoderStateMachine::CallDecodeMetadata() Line 2148	C++
xul.dll!nsRunnableMethodImpl<void (__thiscall mozilla::MediaDecoderStateMachine::*)(void),void,1>::Run() Line 388	C++
xul.dll!mozilla::MediaTaskQueue::Runner::Run() Line 237	C++


I can crash within a few seconds just with:
 ./mach mochitest-plain dom/media/test/test_eme_obs_notification.html --repeat 10000 --run-until-failure
Ah, sorry!  That's what I get for trying to fix it on a platform I can't reproduce it on.
Attached patch bug1131640_v0.patch (obsolete) — Splinter Review
Attachment #8563192 - Attachment is obsolete: true
Comment on attachment 8563662 [details] [diff] [review]
bug1131640_v0.patch

Edwin's fix in bug 1133370 is simpler.
Attachment #8563662 - Attachment is obsolete: true
Fixed by bug 1133370.
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Assignee: kinetik → edwin
Depends on: 1133370
Target Milestone: --- → mozilla38
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: