Bug 1131640 - Revert to older GMP shutdown behaviour.